--- a/Java/AppClientes/app/src/main/AndroidManifest.xml
+++ b/Java/AppClientes/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.AppClientes"
         tools:targetApi="31">
         <activity
-            android:name=".CadastroActivity"
+            android:name=".view.CadastroActivity"
             android:exported="false" />
         <activity
             android:name=".view.LoginActivity"
