--- a/Java/AppClientes/app/src/main/AndroidManifest.xml
+++ b/Java/AppClientes/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.AppClientes"
         tools:targetApi="31">
         <activity
+            android:name=".view.RecuperarSenhaActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.CadastroActivity"
             android:exported="false" />
         <activity
