--- a/Java/AppListaDeCompras/app/build.gradle
+++ b/Java/AppListaDeCompras/app/build.gradle
@@ -1,15 +1,15 @@
 plugins {
-    id 'com.android.application'
-    id 'realm-android'
+    id ("com.android.application")
+    id ("realm-android")
 }
 
 android {
     namespace 'br.com.dev.applistadecompras'
-    compileSdkVersion 34
+    compileSdkVersion 35
     buildToolsVersion "34.0.0"
     defaultConfig {
         applicationId "br.com.dev.applistadecompras"
-        minSdkVersion 19
+        minSdkVersion 21
         //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 30
         versionCode 1
@@ -32,8 +32,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation ("androidx.appcompat:appcompat:1.2.0")
+    implementation ("com.google.android.material:material:1.2.1")
+    implementation ("androidx.constraintlayout:constraintlayout:2.0.4")
+    implementation ("androidx.activity:activity:1.10.1")
 
 }
