--- a/Java/AppListaDeCompras/app/src/main/AndroidManifest.xml
+++ b/Java/AppListaDeCompras/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".view.CadastroActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.MainActivity"
             android:exported="false" />
         <activity
