--- a/Java/AppListaDeCompras/app/build.gradle
+++ b/Java/AppListaDeCompras/app/build.gradle
@@ -32,9 +32,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation ("androidx.appcompat:appcompat:1.2.0")
-    implementation ("com.google.android.material:material:1.2.1")
-    implementation ("androidx.constraintlayout:constraintlayout:2.0.4")
+    implementation ("androidx.appcompat:appcompat:1.7.0")
+    implementation ("com.google.android.material:material:1.12.0")
+    implementation ("androidx.constraintlayout:constraintlayout:2.2.1")
+    implementation ("com.github.Shashank02051997:FancyAlertDialog-Android:0.3")
     implementation ("androidx.activity:activity:1.10.1")
 
 }
