--- a/Java/AppListaDeCompras/build.gradle
+++ b/Java/AppListaDeCompras/build.gradle
@@ -4,15 +4,13 @@ buildscript {
     
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.6.1'
-        classpath 'io.realm:realm-gradle-plugin:10.15.1'
-        
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath ("com.android.tools.build:gradle:8.6.1")
+        classpath ("io.realm:realm-gradle-plugin:10.19.0")
+        classpath ("com.github.dcendents:android-maven-gradle-plugin:2.1")
     }
 }
 
@@ -20,6 +18,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {url "https://jitpack.io"}
     }
 }
 
