--- a/Java/AppListaDeCompras/app/src/main/AndroidManifest.xml
+++ b/Java/AppListaDeCompras/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <!-- android:theme="@style/AppTheme" -->
     <application
         android:name=".view.AppApplication"
         android:allowBackup="true"
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".view.CadastroActivity"
-            android:exported="false" />
+            android:windowSoftInputMode="adjustResize|stateHidden"/>
         <activity
             android:name=".view.MainActivity"
             android:exported="false" />
