implementação de regras na tela de cadastro

--- a/Java/AppListaDeCompras/app/src/main/AndroidManifest.xml
+++ b/Java/AppListaDeCompras/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".view.CadastroActivity"
-            android:windowSoftInputMode="adjustResize|stateHidden"/>
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".view.MainActivity"
             android:exported="false" />
