--- a/Java/AppClientes/app/src/main/AndroidManifest.xml
+++ b/Java/AppClientes/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             android:exported="false" />
         <activity
             android:name=".view.CadastroActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
         <activity
             android:name=".view.LoginActivity"
