--- a/Java/AppClientes/app/src/main/AndroidManifest.xml
+++ b/Java/AppClientes/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.SEND_SMS"
+        tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
+
     <application
         android:name=".view.AppApplication"
         android:allowBackup="true"
