--- a/Java/AppClientes/app/src/main/AndroidManifest.xml
+++ b/Java/AppClientes/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.SEND_SMS"
         tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".view.AppApplication"
